--- a/loja/static/loja/css/style.css
+++ b/loja/static/loja/css/style.css
@@ -330,14 +330,23 @@ section .cart-box {
   right: 0;
 }
 
-.dropdown-content a {
+.dropdown-content button {
   color: #333;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
+  background-color: transparent;
+  cursor: pointer;
+  border: 0 none;
 }
 
-.dropdown-content a:hover {
+.dropdown-content form {
+  display: flex;
+  justify-content: center;
+  transition: 0.5s;
+}
+
+.dropdown-content form:hover {
   background-color: #f1f1f1;
 }
 
