--- a/contas/templates/contas/login.html
+++ b/contas/templates/contas/login.html
@@ -1,85 +1,5 @@
-<style>
-
-body {
-    background-color: #ffffff; 
-}
-.form-container {
-    margin-top: 180px;
-    
-}
-.logo {
-    text-align: center;
-    font-size: 28px;
-    font-weight: 700;
-    color: #2e245e;
-    margin-bottom: 15px;
-    font-family: 'Arial', sans-serif; 
-}
-form {
-    max-width: 400px;
-    margin: 0 auto;
-    padding: 25px;
-    background-color: #ffffffee; 
-    border-radius: 15px;
-    box-shadow: 0px 5px 16px rgba(0, 0, 0, 0.1);
-    font-family: 'Arial', sans-serif; 
-}
-form h2 {
-    font-size: 24px;
-    font-weight: 700;
-    color: #2e245e;
-    margin-bottom: 20px;
-    text-align: center;
-    font-family: 'Arial', sans-serif;
-}
-form p {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 15px;
-}
-form p label {
-    font-size: 14px;
-    font-weight: 600;
-    color: #2e245e; 
-    margin-bottom: 5px;
-}
-form input[type="text"],
-form input[type="password"] {
-    width: 100%;
-    padding: 12px;
-    font-size: 14px;
-    color: #2e245e; 
-    background-color: #ffffff;
-    border: 1px solid #d1cfe2;
-    border-radius: 8px;
-    transition: border-color 0.3s;
-    font-family: 'Arial', sans-serif; 
-}
-form input[type="text"]:focus,
-form input[type="password"]:focus {
-    border-color: #2e245e; 
-    outline: none;
-    box-shadow: 0px 0px 5px rgba(46, 36, 94, 0.3); 
-}
-form button[type="submit"] {
-    width: 100%;
-    padding: 12px;
-    background-color: #2e245e; 
-    color: #ffffff;
-    font-size: 16px;
-    font-weight: 700;
-    border: none;
-    border-radius: 10px;
-    cursor: pointer;
-    transition: background-color 0.3s, transform 0.3s;
-    margin-top: 10px;
-    font-family: 'Arial', sans-serif;
-}
-form button[type="submit"]:hover {
-    background-color: #37268c; 
-    transform: scale(1.02);
-}
-</style>
+{% load static %}
+<link rel="stylesheet" href="{% static 'contas/css/style.css' %}">
 <div class="form-container">
     <h1 class="logo">Weartake</h1> 
     <form method="post">
